--- a/Neos.Media.Browser/composer.json
+++ b/Neos.Media.Browser/composer.json
@@ -8,11 +8,11 @@
         "neos/content-repository": "self.version",
         "neos/neos": "self.version",
 
-        "neos/flow": "*",
-        "neos/fluid-adaptor": "*",
-        "neos/utility-files": "*",
-        "neos/utility-mediatypes": "*",
-        "neos/error-messages": "*",
+        "neos/flow": "~5.0.0",
+        "neos/fluid-adaptor": "~5.0.0",
+        "neos/utility-files": "~5.0.0",
+        "neos/utility-mediatypes": "~5.0.0",
+        "neos/error-messages": "~5.0.0",
 
         "doctrine/common": "~2.7.0",
         "doctrine/orm": "~2.6.0"
