--- a/Neos.Media/composer.json
+++ b/Neos.Media/composer.json
@@ -6,11 +6,11 @@
     "require": {
         "neos/imagine": "^3.0.2",
 
-        "neos/flow": "*",
-        "neos/cache": "*",
-        "neos/fluid-adaptor": "*",
-        "neos/utility-objecthandling": "*",
-        "neos/utility-arrays": "*",
+        "neos/flow": "~5.0.0",
+        "neos/cache": "~5.0.0",
+        "neos/fluid-adaptor": "~5.0.0",
+        "neos/utility-objecthandling": "~5.0.0",
+        "neos/utility-arrays": "~5.0.0",
 
         "imagine/imagine": "*",
 
