--- a/Neos.NodeTypes/composer.json
+++ b/Neos.NodeTypes/composer.json
@@ -2,15 +2,15 @@
     "name": "neos/nodetypes",
     "type": "neos-package",
     "description": "Node type configuration for Neos",
-    "license": ["GPL-3.0-or-later"],
+    "license": [
+        "GPL-3.0-or-later"
+    ],
     "require": {
         "neos/form": "*",
-
         "neos/media": "self.version",
         "neos/content-repository": "self.version",
         "neos/neos": "self.version",
         "neos/fusion": "self.version",
-
         "neos/nodetypes-basemixins": "self.version",
         "neos/nodetypes-assetlist": "self.version",
         "neos/nodetypes-columnlayouts": "self.version",
@@ -99,7 +99,8 @@
             "Neos.Neos-20161219122512",
             "Neos.Fusion-20161219130100",
             "Neos.Neos-20161220163741",
-            "Neos.Fusion-20170120013047"
+            "Neos.Fusion-20170120013047",
+            "Neos.Neos-20170115114620"
         ]
     }
 }
