--- a/Neos.Neos/Configuration/Settings.yaml
+++ b/Neos.Neos/Configuration/Settings.yaml
@@ -387,6 +387,11 @@ Neos:
         ö: oe
         ü: ue
 
+    Ui:
+      frontendConfiguration:
+        legacy:
+          disableLegacyUiSwitch: true
+
   Flow:
     aop:
       globalObjects:
