--- a/Neos.Fusion.Afx/composer.json
+++ b/Neos.Fusion.Afx/composer.json
@@ -7,7 +7,7 @@
     "packagefactory/atomicfusion-afx": "*"
   },
   "require": {
-    "neos/fusion": "^3.2.0 || dev-master",
+    "neos/fusion": "^3.2.0 || ^4.0.0 || dev-master",
     "packagefactory/afx": "~2.0.1"
   },
   "require-dev": {
