TASK: invert disableLegacyUiSwtich to enableLegacyUiSwitch

--- a/Neos.Neos/Configuration/Settings.yaml
+++ b/Neos.Neos/Configuration/Settings.yaml
@@ -390,7 +390,7 @@ Neos:
     Ui:
       frontendConfiguration:
         legacy:
-          disableLegacyUiSwitch: true
+          enableLegacyUiSwitch: false
 
   Flow:
     aop:
