--- a/Neos.ContentRepository/composer.json
+++ b/Neos.ContentRepository/composer.json
@@ -101,7 +101,8 @@
             "Neos.ContentRepository-20161219093512",
             "Neos.Fusion-20170120013047",
             "Neos.Flow-20180415105700",
-            "Neos.Fusion-20161219092345"
+            "Neos.Fusion-20161219092345",
+            "Neos.Media-20161219094126"
         ]
     }
 }
