TASK: Apply migration Neos.Neos-20161219122512 to package "Neos.ContentRepository"
Migrate usages of TypoScriptService to FusionService

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/Neos.ContentRepository/composer.json
+++ b/Neos.ContentRepository/composer.json
@@ -103,7 +103,8 @@
             "Neos.Flow-20180415105700",
             "Neos.Fusion-20161219092345",
             "Neos.Media-20161219094126",
-            "Neos.Neos-20161219094403"
+            "Neos.Neos-20161219094403",
+            "Neos.Neos-20161219122512"
         ]
     }
 }
