--- a/Neos.ContentRepository/composer.json
+++ b/Neos.ContentRepository/composer.json
@@ -102,7 +102,8 @@
             "Neos.Fusion-20170120013047",
             "Neos.Flow-20180415105700",
             "Neos.Fusion-20161219092345",
-            "Neos.Media-20161219094126"
+            "Neos.Media-20161219094126",
+            "Neos.Neos-20161219094403"
         ]
     }
 }
