--- a/Neos.ContentRepository/composer.json
+++ b/Neos.ContentRepository/composer.json
@@ -104,7 +104,8 @@
             "Neos.Fusion-20161219092345",
             "Neos.Media-20161219094126",
             "Neos.Neos-20161219094403",
-            "Neos.Neos-20161219122512"
+            "Neos.Neos-20161219122512",
+            "Neos.Fusion-20161219130100"
         ]
     }
 }
