--- a/Neos.SiteKickstarter/Resources/Private/Generator/Configuration/NodeTypes.Document.Page.yaml
+++ b/Neos.SiteKickstarter/Resources/Private/Generator/Configuration/NodeTypes.Document.Page.yaml
@@ -1,17 +1,16 @@
-# If you need more than just the "main" content area you can uncomment the snippet below. It will add a "sidebar" area
-# to your pages. You can add as many areas as you like, still only those that are rendered in your Fusion-code and
-# Template are visible on your page.
----
-#'{packageKey}:Page':
-#  childNodes:
-#    'sidebar':
-#      type: 'Neos.Neos:ContentCollection'
-
 '{packageKey}:Page':
   superTypes:
     'Neos.Neos:Document': true
   ui:
     icon: 'icon-file'
+    label: '{packageKey} Custom Page'
   childNodes:
     main:
       type: 'Neos.Neos:ContentCollection'
+
+# If you need more than just the "main" content area you can uncomment the snippet below. It will add a "sidebar" area
+# to your pages. You can add as many areas as you like, still only those that are rendered in your Fusion-code and
+# Template are visible on your page.
+---
+#    'sidebar':
+#      type: 'Neos.Neos:ContentCollection'
