--- a/Neos.Media/composer.json
+++ b/Neos.Media/composer.json
@@ -2,18 +2,17 @@
     "name": "neos/media",
     "type": "neos-package",
     "description": "The Media package",
-    "license": ["GPL-3.0-or-later"],
+    "license": [
+        "GPL-3.0-or-later"
+    ],
     "require": {
         "neos/imagine": "^3.0.2",
-
         "neos/flow": "~5.0.0",
         "neos/cache": "~5.0.0",
         "neos/fluid-adaptor": "~5.0.0",
         "neos/utility-objecthandling": "~5.0.0",
         "neos/utility-arrays": "~5.0.0",
-
         "imagine/imagine": "*",
-
         "doctrine/common": "~2.7.0",
         "doctrine/orm": "~2.6.0",
         "doctrine/dbal": "~2.7.0"
@@ -98,7 +97,8 @@
             "Neos.Fusion-20161202215034",
             "Neos.ContentRepository-20161219093512",
             "Neos.Media-20161219094126",
-            "Neos.Fusion-20170120013047"
+            "Neos.Fusion-20170120013047",
+            "Neos.Fusion-20161219092345"
         ]
     }
 }
