TASK: Apply migration Neos.Fusion-20161219130100 to package "Neos.Media"
Migrate name for the TypoScriptView to FusionView

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/Neos.Media/composer.json
+++ b/Neos.Media/composer.json
@@ -100,7 +100,8 @@
             "Neos.Fusion-20170120013047",
             "Neos.Fusion-20161219092345",
             "Neos.Neos-20161219094403",
-            "Neos.Neos-20161219122512"
+            "Neos.Neos-20161219122512",
+            "Neos.Fusion-20161219130100"
         ]
     }
 }
