--- a/Neos.Media/composer.json
+++ b/Neos.Media/composer.json
@@ -101,7 +101,8 @@
             "Neos.Fusion-20161219092345",
             "Neos.Neos-20161219094403",
             "Neos.Neos-20161219122512",
-            "Neos.Fusion-20161219130100"
+            "Neos.Fusion-20161219130100",
+            "Neos.Neos-20161220163741"
         ]
     }
 }
