TASK: Apply migration Neos.Neos-20161219122512 to package "Neos.Media"
Migrate usages of TypoScriptService to FusionService

Note: This migration did not produce any changes, so the commit simply
marks the migration as applied. This makes sure it will not be applied
again.

--- a/Neos.Media/composer.json
+++ b/Neos.Media/composer.json
@@ -99,7 +99,8 @@
             "Neos.Media-20161219094126",
             "Neos.Fusion-20170120013047",
             "Neos.Fusion-20161219092345",
-            "Neos.Neos-20161219094403"
+            "Neos.Neos-20161219094403",
+            "Neos.Neos-20161219122512"
         ]
     }
 }
