--- a/Neos.Media.Browser/composer.json
+++ b/Neos.Media.Browser/composer.json
@@ -2,18 +2,18 @@
     "name": "neos/media-browser",
     "type": "neos-package",
     "description": "This module allows managing of media assets including pictures, videos, audio and documents.",
-    "license": ["GPL-3.0-or-later"],
+    "license": [
+        "GPL-3.0-or-later"
+    ],
     "require": {
         "neos/media": "self.version",
         "neos/content-repository": "self.version",
         "neos/neos": "self.version",
-
         "neos/flow": "~5.0.0",
         "neos/fluid-adaptor": "~5.0.0",
         "neos/utility-files": "~5.0.0",
         "neos/utility-mediatypes": "~5.0.0",
         "neos/error-messages": "~5.0.0",
-
         "doctrine/common": "~2.7.0",
         "doctrine/orm": "~2.6.0"
     },
@@ -85,7 +85,8 @@
             "Neos.Flow-20161125124112",
             "TYPO3.FluidAdaptor-20161130112935",
             "Neos.Fusion-20161201202543",
-            "Neos.Fusion-20170120013047"
+            "Neos.Fusion-20170120013047",
+            "Neos.Neos-20161201222211"
         ]
     }
 }
