--- a/Neos.Media.Browser/composer.json
+++ b/Neos.Media.Browser/composer.json
@@ -87,7 +87,8 @@
             "Neos.Fusion-20161201202543",
             "Neos.Fusion-20170120013047",
             "Neos.Neos-20161201222211",
-            "Neos.Fusion-20161202215034"
+            "Neos.Fusion-20161202215034",
+            "Neos.Fusion-20161219092345"
         ]
     }
 }
