--- a/Neos.Media.Browser/composer.json
+++ b/Neos.Media.Browser/composer.json
@@ -88,7 +88,8 @@
             "Neos.Fusion-20170120013047",
             "Neos.Neos-20161201222211",
             "Neos.Fusion-20161202215034",
-            "Neos.Fusion-20161219092345"
+            "Neos.Fusion-20161219092345",
+            "Neos.ContentRepository-20161219093512"
         ]
     }
 }
