--- a/Neos.Media.Browser/composer.json
+++ b/Neos.Media.Browser/composer.json
@@ -97,7 +97,8 @@
             "Neos.Neos-20161220163741",
             "Neos.Neos-20170115114620",
             "Neos.Flow-20170125103800",
-            "Neos.Seo-20170127154600"
+            "Neos.Seo-20170127154600",
+            "Neos.Flow-20170127183102"
         ]
     }
 }
