--- a/Neos.NodeTypes.Form/composer.json
+++ b/Neos.NodeTypes.Form/composer.json
@@ -2,7 +2,9 @@
     "name": "neos/nodetypes-form",
     "type": "neos-package",
     "description": "A simple form node type.",
-    "license": ["GPL-3.0-or-later"],
+    "license": [
+        "GPL-3.0-or-later"
+    ],
     "require": {
         "neos/neos": "*",
         "neos/form": "*",
@@ -85,7 +87,8 @@
             "Neos.Neos-20161219122512",
             "Neos.Fusion-20161219130100",
             "Neos.Neos-20161220163741",
-            "Neos.Fusion-20170120013047"
+            "Neos.Fusion-20170120013047",
+            "Neos.Neos-20170115114620"
         ]
     }
 }
