TASK: Configure documentation / api generators for 4.0

--- a/composer.json
+++ b/composer.json
@@ -116,7 +116,7 @@
                 "Neos.Neos/Resources/Private/Installer/"
             ]
         },
-        "typo3/flow": {
+        "neos/flow": {
             "manage-resources": true
         }
     },
