BUGFIX: Fix dependencies for site kickstarter

--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
         "neos/setup": "*",
         "neos/twitter-bootstrap": "*",
         "neos/form": "*",
-        "neos/kickstarter": "~5.0.0"
+        "neos/kickstarter": "*"
     },
     "replace": {
         "typo3/typo3cr": "self.version",
