TASK: Make the kickstarted Document NodeType, it's Fusion prototype and the Page.html template more consistent and beginner-friendly.

--- a/Neos.SiteKickstarter/Resources/Private/Generator/Configuration/NodeTypes.Document.Page.yaml
+++ b/Neos.SiteKickstarter/Resources/Private/Generator/Configuration/NodeTypes.Document.Page.yaml
@@ -1,4 +1,6 @@
----
+# This is a custom document nodetype which has been auto-generated for your site package
+# by Neos. It works exactly the same as the generic Neos.NodeTypes:Page. You can customize this
+# to your needs or remove it if you do not need a custom page type.
 '{packageKey}:Page':
   superTypes:
     'Neos.Neos:Document': true
