BUGFIX: Fix wrong flow-development-collection dependency

--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,7 @@
     ],
     "type": "neos-package-collection",
     "require": {
-        "neos/flow-development-collection": "dev-master",
+        "neos/flow-development-collection": "~5.1.0 || 5.1.x-dev",
         "neos/flow": "*",
         "neos/cache": "*",
         "neos/eel": "*",
