--- a/composer.json
+++ b/composer.json
@@ -10,12 +10,7 @@
         "doctrine/dbal": "~2.5.0",
         "doctrine/migrations": "~1.3.0",
         "ext-json": "*",
-        "neos/flow": "*",
-        "neos/cache": "*",
-        "neos/eel": "*",
-        "neos/utility-objecthandling": "*",
-        "neos/utility-files": "*",
-        "neos/utility-arrays": "*"
+        "neos/event-sourcing": "dev-master"
     },
     "replace": {
         "neos/contentgraph-doctrinedbaladapter": "self.version",
