--- a/composer.json
+++ b/composer.json
@@ -6,17 +6,15 @@
     ],
     "type": "neos-package-collection",
     "require": {
-        "neos/content-repository": "*",
         "doctrine/dbal": "~2.5.0",
         "doctrine/migrations": "~1.3.0",
-        "ext-json": "*",
         "neos/event-sourcing": "dev-master"
     },
     "replace": {
         "neos/contentgraph-doctrinedbaladapter": "self.version",
         "neos/event-sourced-content-repository": "self.version"
     },
-    "suggest": {},
+    "suggest": [],
     "autoload": {
         "psr-4": {
             "Neos\\ContentGraph\\DoctrineDbalAdapter\\": [
