--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
     "require": {
         "doctrine/dbal": "~2.5.0",
         "doctrine/migrations": "~1.3.0",
-        "neos/event-sourcing": "dev-master"
+        "neos/event-sourcing": "dev-master",
+        "neos/content-repository": "*"
     },
     "replace": {
         "neos/contentgraph-doctrinedbaladapter": "self.version",
-        "neos/event-sourced-content-repository": "self.version"
+        "neos/event-sourced-content-repository": "self.version",
+        "neos/neos-event-sourced-site-and-workspace": "self.version"
     },
     "suggest": [],
     "autoload": {
@@ -22,6 +24,9 @@
             ],
             "Neos\\EventSourcedContentRepository\\": [
                 "Neos.EventSourcedContentRepository/Classes"
+            ],
+            "Neos\\Neos\\EventSourcedSiteAndWorkspace\\": [
+                "Neos.Neos.EventSourcedSiteAndWorkspace/Classes"
             ]
         }
     },
