TASK: add Dimensionspace package dependency

--- a/Neos.EventSourcedContentRepository/composer.json
+++ b/Neos.EventSourcedContentRepository/composer.json
@@ -7,7 +7,8 @@
     ],
     "require": {
         "neos/event-sourcing": "dev-master",
-        "neos/content-repository": "*"
+        "neos/content-repository": "*",
+        "neos/content-repository-dimensionspace": "dev-master"
     },
     "autoload": {
         "psr-4": {
