--- a/Neos.EventSourcedNeosAdjustments/Configuration/Objects.yaml
+++ b/Neos.EventSourcedNeosAdjustments/Configuration/Objects.yaml
@@ -3,3 +3,5 @@ Neos\Neos\Routing\FrontendNodeRoutePartHandlerInterface:
   className: ~
   factoryObjectName: Neos\EventSourcedNeosAdjustments\EventSourcedRouting\FrontendNodeRoutePartHandlerFactory
   factoryMethodName: create
+'Neos\EventSourcedContentRepository\Domain\Projection\Content\NodeInterface':
+  className: Neos\EventSourcedContentRepository\Domain\Projection\Content\Node
