--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "doctrine/dbal": "~2.7.0",
         "doctrine/migrations": "~1.8.0",
         "neos/event-sourcing": "dev-master",
-        "neos/content-repository": "*"
+        "neos/neos-development-collection": "dev-event-sourced-patch",
+        "neos/content-repository-dimensionspace": "dev-master",
+        "neos/neos": "*"
     },
     "replace": {
         "neos/contentgraph-doctrinedbaladapter": "self.version",
