TASK: no fatal error for now; rendering not working yet (FlowQuery error)

--- a/Neos.EventSourcedNeosAdjustments/Configuration/Settings.yaml
+++ b/Neos.EventSourcedNeosAdjustments/Configuration/Settings.yaml
@@ -11,3 +11,7 @@ Neos:
     contentDimensions:
       resolution:
         uriPathSegmentDelimiter: '_'
+
+  Fusion:
+    defaultContext:
+      Neos.EventSourcedNeosAdjustments.Workspace: Neos\EventSourcedNeosAdjustments\Fusion\Helper\WorkspaceHelper
