--- a/Neos.EventSourcedNeosAdjustments/Configuration/Settings.yaml
+++ b/Neos.EventSourcedNeosAdjustments/Configuration/Settings.yaml
@@ -15,3 +15,4 @@ Neos:
   Fusion:
     defaultContext:
       Neos.EventSourcedNeosAdjustments.Workspace: Neos\EventSourcedNeosAdjustments\Fusion\Helper\WorkspaceHelper
+      Neos.EventSourcedNeosAdjustments.Node: Neos\EventSourcedNeosAdjustments\Fusion\Helper\NodeHelper
