Revert "TASK: for now, disable PHP 7.1 Travis on our branch"
This reverts commit 7fbd85d421aaf20c56e933f4e7d2375d1493c7d5.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,34 @@ language: php
 matrix:
   fast_finish: true
   include:
+    - php: 7.1
+      env: DB=mysql
+      addons:
+        mariadb: '10.2'
+    - php: 7.1
+      env: DB=pgsql
+      sudo: required
+      addons:
+        postgresql: "9.4"
+    - php: 7.1
+      env: DB=pgsql
+      sudo: required
+      addons:
+        postgresql: "9.5"
+    - php: 7.1
+      env: DB=mysql BEHAT=true
+      addons:
+        mariadb: '10.2'
+    - php: 7.1
+      env: DB=pgsql BEHAT=true
+      sudo: required
+      addons:
+        postgresql: "9.4"
+    - php: 7.1
+      env: DB=pgsql BEHAT=true
+      sudo: required
+      addons:
+        postgresql: "9.5"
     - php: 7.2
       env: DB=mysql
       addons:
