TASK: Update AFX Service to WIP Version of AFX without functional changes
This reflects the changes in the afx-ast without any new features.

--- a/Neos.Fusion.Afx/composer.json
+++ b/Neos.Fusion.Afx/composer.json
@@ -8,7 +8,13 @@
   },
   "require": {
     "neos/fusion": "^3.2.0 || ^4.0.0 || dev-master",
-    "packagefactory/afx": "~2.0.1"
+    "packagefactory/afx": "dev-feature/spreads"
+  },
+  "repositories": {
+    "mficzel-afx": {
+      "type": "vcs",
+      "url": "https://github.com/mficzel/afx.git"
+    }
   },
   "require-dev": {
     "phpunit/phpunit": "~6.0.0"
