--- a/Neos.EventSourcedNeosAdjustments/Configuration/NodeTypes.yaml
+++ b/Neos.EventSourcedNeosAdjustments/Configuration/NodeTypes.yaml
@@ -1,1 +1,19 @@
 'Neos.Neos:Sites': []
+'Neos.Neos:Node':
+  properties:
+    _removed: ~
+    _creationDateTime: ~
+    _lastModificationDateTime: ~
+    _lastPublicationDateTime: ~
+    _path: ~
+    _name: ~
+
+'Neos.Neos:Timable':
+  properties:
+# TODO: enable again!
+    _hiddenBeforeDateTime: ~
+    _hiddenAfterDateTime: ~
+
+'Neos.Neos:Document':
+  properties:
+    _hiddenInIndex: ~
