--- a/Neos.EventSourcedNeosAdjustments/Configuration/Settings.yaml
+++ b/Neos.EventSourcedNeosAdjustments/Configuration/Settings.yaml
@@ -12,16 +12,21 @@ Neos:
       resolution:
         uriPathSegmentDelimiter: '_'
 
-    initialState:
-      cr:
-        nodes:
-          byContextPath: '${Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.defaultNodesForBackend(site, documentNode, controllerContext)}'
-        contentDimensions:
-          # TODO: re-enable dimensions
-          allowedPresets: '${[]}'
-      ui:
-        contentCanvas:
-          src: '${Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.uri(Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.nodeAddress(documentNode), controllerContext)}'
+    Ui:
+      initialState:
+        cr:
+          nodes:
+            byContextPath: '${Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.defaultNodesForBackend(site, documentNode, controllerContext)}'
+            siteNode: '${Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.serializedNodeAddress(site)}'
+          contentDimensions:
+            # TODO: re-enable dimensions
+            byName: '${Neos.EventSourcedNeosAdjustments.Ui.ContentDimensions.contentDimensionsByName()}'
+            active: '${documentNode.subgraph.dimensionSpacePoint.coordinates}'
+            allowedPresets: '${Neos.EventSourcedNeosAdjustments.Ui.ContentDimensions.allowedPresetsByName(documentNode.subgraph.dimensionSpacePoint)}'
+        ui:
+          contentCanvas:
+            src: '${Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.uri(Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.nodeAddress(documentNode), controllerContext)}'
+            contextPath: '${Neos.EventSourcedNeosAdjustments.Ui.NodeInfo.serializedNodeAddress(documentNode)}'
 
   Fusion:
     defaultContext:
@@ -31,3 +36,4 @@ Neos:
     Ui:
       configurationDefaultEelContext:
         Neos.EventSourcedNeosAdjustments.Ui.NodeInfo: Neos\EventSourcedNeosAdjustments\Ui\Fusion\Helper\NodeInfoHelper
+        Neos.EventSourcedNeosAdjustments.Ui.ContentDimensions: Neos\EventSourcedNeosAdjustments\Ui\Fusion\Helper\ContentDimensionsHelper
