FEATURE: Remove Feature Flag and always activate all components when packages are active (simplifies logic at various places)

--- a/Neos.EventSourcedNeosAdjustments/Configuration/Objects.yaml
+++ b/Neos.EventSourcedNeosAdjustments/Configuration/Objects.yaml
@@ -1,7 +1,5 @@
 
 Neos\Neos\Routing\FrontendNodeRoutePartHandlerInterface:
-  className: ~
-  factoryObjectName: Neos\EventSourcedNeosAdjustments\EventSourcedRouting\FrontendNodeRoutePartHandlerFactory
-  factoryMethodName: create
+  className: Neos\EventSourcedNeosAdjustments\EventSourcedRouting\EventSourcedFrontendNodeRoutePartHandler
 'Neos\ContentRepository\Domain\Projection\Content\NodeInterface':
   className: Neos\EventSourcedContentRepository\Domain\Projection\Content\Node
