WIP FEATURE: work on sending changes from the UI back to the server

--- a/Neos.EventSourcedNeosAdjustments/Configuration/Policy.yaml
+++ b/Neos.EventSourcedNeosAdjustments/Configuration/Policy.yaml
@@ -6,7 +6,7 @@ privilegeTargets:
       matcher: 'method(Neos\EventSourcedNeosAdjustments\EventSourcedFrontController\EventSourcedNodeController->showAction())'
 
     'Neos.EventSourcedNeosAdjustments:Backend.GeneralAccess':
-      matcher: 'method(Neos\EventSourcedNeosAdjustments\Ui\Controller\BackendController->.*())'
+      matcher: 'method(Neos\EventSourcedNeosAdjustments\Ui\Controller\(BackendController|BackendServiceController)->.*())'
 
 roles:
 
