--- a/.styleci.yml
+++ b/.styleci.yml
@@ -18,3 +18,6 @@ finder:
     - "Neos.NodeTypes/Tests"
     - "Neos.SiteKickstarter/Classes"
     - "Neos.SiteKickstarter/Tests"
+
+enabled:
+  - short_array_syntax
