TASK: Raise Neos.Fusion dependency to ^4.2 and use AFX ^3.0

--- a/Neos.Fusion.Afx/composer.json
+++ b/Neos.Fusion.Afx/composer.json
@@ -7,8 +7,8 @@
     "packagefactory/atomicfusion-afx": "*"
   },
   "require": {
-    "neos/fusion": "^3.2.0 || ^4.0.0 || dev-master",
-    "packagefactory/afx": "dev-feature/spreads"
+    "neos/fusion": "^4.2.0 || dev-master",
+    "packagefactory/afx": "^3.0.0"
   },
   "repositories": {
     "mficzel-afx": {
